2002-03-05  Ken Raeburn  <raeburn@mit.edu>

	* loginpaths.h [_PATH_DEFPATH]: Undefine LPATH and RPATH
	unconditionally before redefining them.

	* login.c (main): If the supplied name is longer than the utmp
	buffer, don't bother trying it as a username.
	(dolastlog): Don't assume lastlog.ll_time is a time_t.

2002-02-27  Ken Raeburn  <raeburn@mit.edu>

	* fieldbits.h: Deleted.

2002-02-10  Ken Raeburn  <raeburn@mit.edu>

	* defines.h: Include fake-addrinfo.h.
	(FAI_PREFIX): Define.
	(getport): Update.
	* kcmd.c: Include fake-addrinfo.c.
	(kcmd): Use getaddrinfo instead of gethostbyname, but only get
	AF_INET addresses for now.
	(k4cmd): Update argument list to getport.
	(getport): Accept new argument, pointer to address family to use.
	If zero, try inet6 and then inet.
	* krshd.c (doit): Update argument list to getport.

2001-12-06  Ezra Peisach  <epeisach@mit.edu>

	* krcp.c, krlogin.c, krlogind.c, krsh.c, krshd.c, login.c,
	setenv.c, v4rcp.c: Signed v.s unsigned int cleanup.

	* defines.h: rcmd_stream_{read,write} take size_t as length argument.

	* kcmd.c: Use GETSOCKNAME_ARG3_TYPE instead of assuming int. input
	and output handler take size_t as length argument instead of
	int. Other signed vs. unsigned fixes.

	* configure.in: Add KRB5_GETSOCKNAME_ARGS.

2001-11-06  Sam Hartman  <hartmans@mit.edu>

	* kcmd.c: Define storage for our key usages
	(rcmd_stream_init_krb5): Support c_init_state for non-des non-des3 enctypes
	(v5_des_write v5_des_read):  support variable keyusage

2001-10-09  Ken Raeburn  <raeburn@mit.edu>

	* krlogin.c: Make prototypes unconditional.

2001-09-13  Ken Raeburn  <raeburn@mit.edu>

	* krlogin.c (try_normal): Permit "rsh" as well as "rlogin" as the
	program name, for detecting when argv[0] is not the hostname.
	If argv[0] isn't the hostname, always replace it with the system
	rlogin pathname.

2001-09-01  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (SRCS): Use $(srcdir).

2001-07-23  Ezra Peisach  <epeisach@mit.edu>
