@@ -1,3 +1,12 @@
+2002-03-07  Ken Raeburn  <raeburn@mit.edu>
+
+	* kcmd.c: Revert 2002-02-10 changes except those related to
+	getport.
+	(masktype): New typedef.
+	(block_urgent, restore_sigs, kcmd_connect,
+	setup_secondary_channel): New functions.
+	(kcmd, k4cmd): Use them.  Delete redundant getpid calls.
+
 2002-03-05  Ken Raeburn  <raeburn@mit.edu>
 
 	* loginpaths.h [_PATH_DEFPATH]: Undefine LPATH and RPATH
